# HDDT

./: CMakeLists.txt
apps/torch_app/: CMakeLists.txt  main.cpp
cmake/: FindPyTorch.cmake
include/: nn.hpp  nn_kernel.cuh
src/nn/: nn.cpp
src/nn/cuda/: nn_cuda_cnn.cu
src/nn/rocm/: nn_rocm_cnn.cu
tests/: CMakeLists.txt  nnTest.cpp
